# unreal-engine-agentic-control

./: .env.example  .gitignore  CLAUDE.md  PROJECT_PLAN.md  README.md  main.py  pyproject.toml
.claude/: settings.json
agents/image_gen/: agent.py
agents/orchestrator/: agent.py
agents/ue_editor/: agent.py
mcp_server/: server.py
tests/: test_mcp_tools.py
unreal_plugin/AgenticControl/: AgenticControl.uplugin
unreal_plugin/AgenticControl/Source/AgenticControl/: AgenticControl.Build.cs
unreal_plugin/AgenticControl/Source/AgenticControl/Private/: AgenticControlModule.cpp  AgenticControlServer.cpp
unreal_plugin/AgenticControl/Source/AgenticControl/Public/: AgenticControlServer.h
